--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/fastFM-core"]
 	path = src/fastFM-core
-	url = https://github.com/adrtod/fastFM-core
+	url = git@github.com:adrtod/fastFM-core.git
 [submodule "src/CXSparse"]
 	path = src/CXSparse
 	url = git@github.com:ibayer/CXSparse.git
