--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: person("Adrien", "Todeschini", email = "adrien.todeschini@gmail.com",
 Maintainer: Adrien Todeschini <adrien.todeschini@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: GPL-3 + FILE src/fastFM-core/Copying
+License: GPL-3 + FILE src/fastFM-core/COPYING
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/adrtod/rfastFM
@@ -15,3 +15,4 @@ SystemRequirements: GNU make, libopenblas-dev
 LinkingTo: Rcpp
 Imports: Rcpp
 RoxygenNote: 6.0.1
+Suggests: testthat
