--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/fastFM-core"]
 	path = src/fastFM-core
-	url = https://github.com/adrtod/fastFM-core.git
+	url = https://github.com/ibayer/fastFM-core.git
 
